manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82022007"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82022007"
  template:
    metadata:
      labels:
        app: "82022007" 
    spec:
      containers:
        - name: "82022007"
          image: ceappacr.azurecr.io/82022007
          ports:
          - containerPort: 8080
